--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,4 +11,4 @@ jobs:
       - uses: ./
       - run: |
           echo "${{ env.test_var }}"
-          echo "${PATH}"
+          echo "${GITHUB_PATH}"
