--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/mbround18/install-jq#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1"
+    "@actions/github": "^5.1.1",
+    "glob": "^8.0.3"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.0"
