--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "glob": "^8.0.3"
+    "axios": "^1.2.1"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.0"
